style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body{
  font-family: 'Montserrat', sans-serif;
  font-size: 0.8rem;
  font-weight: bold;
}

main{
  display: flex;
}

:root{
  --top-bar-color: #0404044e;
  --side-bar-color: #000000;
  --interface-color: #141922;
  --bottom-bar-color: #282828;
  --text-color: #7B7D81;
  --fa-plus-color: #A3A3A3;
}

span, li, i{
  color: var(--text-color);
}

span:hover, li:hover, i:hover{
  cursor: pointer;
  color: white;
}

.active-sidebar{
  border-left: 4px solid greenyellow;
  background-color: #1a1a1a93;
}

.active-interface{
  border-bottom: 4px solid greenyellow;
}

/* MAIN */
/* SIDEBAR */
.side-bar{
  background-color: var(--side-bar-color);
  height: calc(100vh - 90px);
  width: 220px;
}

.menu{
  height: calc(100% - 100px);
  width: 100%;
}

/* LOGO */
.main-menu .logo svg:nth-child(2){
  margin: 0 15px;
  height: 80px;
  width: 130px;
}

.main-menu .logo svg:nth-child(1){
  display: none;
  margin: 20px 0;
  height: 40px;
  width: 60px;
}

/* ICONS */
.main-menu .icons{
  margin-bottom: 20px;
  display: flex;
  flex-direction: column;
}

.main-menu .icons div{
  padding: 5px 15px;
  display: flex;
  align-items: center;
}

.main-menu .icons svg{
  height: 30px;
  width: 30px;
  margin-right: 5px;
}

/* PLAYLIST TITLE */
.playlist-title{
  padding: 10px 15px;
}

.playlist-title span:first-child{
  color: white;
  text-transform: uppercase;
}

.playlist-title div{
  margin: 10px 0;
}

.fa-plus{
  background-color: var(--fa-plus-color);
  color: black;
  padding: 10px;
  margin-right: 5px;
}

/* PLAYLIST */
.playlist{
  padding: 0 15px;
  height: 40%;
  overflow: auto;
  line-height: 2rem;
}

.playlist ul{
  list-style: none;
}

.user{
  padding: 0 15px;
  height: 80px;
  width: 100%;
}

/* USER */
.user div{
  display: flex;
  align-items: center;
}

.user div:first-child svg{
  color: var(--text-color);
  height: 20px;
  width: 20px;
  margin-right: 10px;
}

hr{
  margin: 10px 0;
}

.user div:last-child svg{
  background-color: var(--text-color);
  height: 30px;
  width: 30px;
  border-radius: 50%;
  margin-right: 10px;
}

.user div:last-child span{
  color: white;
}


/* TOP BAR */
.top-bar{
  background-color: var(--top-bar-color);
  height: 90px;
  width: calc(100vw - 220px);
  position: fixed;
  z-index: 999;
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
}

.top-bar button{
  background-color: var(--top-bar-color);
  color: white;
  text-transform: uppercase;
  border: 1px solid white;
  border-radius: 30px;
  padding: 15px 50px;
  margin-right: 30px;
  transition: transform;
}

.top-bar button:hover{
  transform: scale(1.2);
  cursor: pointer;
}

/* INTERFACE */
.interface{
  background-color: var(--interface-color);
  height: calc(100vh - 90px);
  width: calc(100vw - 220px);
}

.interface-container{
  height: 100%;
  width: 100%;
  padding: 110px 40px 10px;
  overflow: auto;
}

/* CATEGORIES MENU */
.categories-menu{
  display: flex;
  justify-content: center;
}

.categories-menu ul{
  display: flex;
  list-style: none;
}

.categories-menu li{
  padding: 0 10px;
  text-transform: uppercase;
}

/* RECENTLY */
.recently{
  margin: 30px 0;
}

.recently span:first-of-type, .for-you span:first-of-type, .popular span:first-of-type{
  color: white;
  font-size: 1.4rem;
}

.row{
  width: 100%;
  margin: 20px 0;
  display: flex;
}

.recently .row{
  justify-content: space-between;
}

.recently .col{
  width: calc(100% / 6 - 30px);
}

.card{
  display: flex;
  flex-direction: column;
}

.card-img img{
  width: 100%;
  height: 100%;
}

.card-img{
  position: relative;
}

.above-card{
  background-color: #3029297a;
  position: absolute;
  width: 100%;
  height: 100%;
  display: none;
}

.card-img .above-card i{
  color: white;
  position: absolute;
  font-size: 5rem;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

.card-img:hover{
  cursor: pointer;
  .above-card{
    display: block;
  }
}

.card-text{
  margin-top: 10px;
  display: flex;
  flex-direction: column;
  text-align: center;
}

.card-text span:first-child{
  font-size: 0.9rem;
  margin-bottom: 10px;
}

.card-text span:nth-child(2){
  font-size: 0.7rem;
  color: var(--text-color);
}

/* FOR YOU */
.for-you .row, .popular .row{
  width: 100%;
  justify-content: flex-start;
}

.for-you .col, .popular .col{
  width: calc(30% / 2);
  margin-right: 40px;
}

.section-title{
  display: flex;
  flex-direction: column;
}

.for-you div:first-child span:first-child, .popular div:first-child span:first-child{
  margin-bottom: 10px;
}

/* POPULAR */
.popular .card-img:hover{
  cursor: pointer;
  .above-card{
    border-radius: 50%;
    display: block;
  }
}

.popular img{
  border-radius: 50%;
}


/* FOOTER - BOTTOM BAR */
footer{
  background-color: var(--bottom-bar-color);
  height: 90px;
  width: 100vw;
  display: flex;
  align-items: center;
}

.bottom-bar{
  margin: 0 20px;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.song, .player, .volume{
  height: 100%;
  display: flex;
  align-items: center;
  width: calc(100% / 3);
}

/* SONG */
.song div:nth-child(1) img{
  height: 45px;
  width: 45px;
}

.song div:nth-child(2){
  width: 200px;
  margin: 0 10px;
  display: flex;
  flex-direction: column;
}

.song div:nth-child(2) span:first-child{
  color: white;
}

.song div:nth-child(2) span:nth-child(2){
  font-size: 0.7rem;
}

.song div:nth-child(2) span:nth-child(2):hover{
  text-decoration: underline;
}

/* PLAYER */
.player{
  flex-direction: column;
  text-align: center;
}

.player span, .volume span, .player i, .volume i{
  color: white;
}

.player div{
  width: 100%;
}

.player div:first-child i{
  padding: 0 10px;
  font-size: 15px;
}

.player div:first-child .fa-circle-play{
  font-size: 30px;
}

.player div:nth-child(2){
  display: flex;
  align-items: center;
}

.player div:nth-child(2) span{
  font-size: 0.7rem;
}

.player .fa-circle-play{
  transition: transform;
}

.player .fa-circle-play:hover{
  transform: scale(1.2);
}

#timer{
  background-color: var(--text-color);
  height: 3px;
  width: calc(100% -50px);
  margin: 15px 20px;
  border-radius: 30px;
}

#timer-song{
  background-color: lightgray;
  height: 3px;
  width: 30%;
  border-radius: 30px;
}

#volume-bar .fa-circle, #timer .fa-circle{
  display: none;
}

#timer:hover{
  cursor: pointer;

  #timer-song{
    background-color: greenyellow;
  }

  .fa-circle{
    display: flex;
  }
}


/* VOLUME */
.volume{
  justify-content: flex-end;
}

.volume i{
  padding: 0 10px;
}

.volume div{
  background-color: var(--text-color);
  height: 3px;
  width: 100px;
  border-radius: 30px;
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.volume #volume-bar div{
  background-color: lightgray;
  height: 3px;
  width: 30px;
  border-radius: 30px;
}

.volume #volume-bar:hover{
  cursor: pointer;
}

.volume #volume-bar:hover div{
  background-color: greenyellow;
}

.volume #volume-bar:hover i{
  padding: 0;
  display: block;
}

/* RESPONSIVE */
@media screen and (max-width: 1200px){
  .interface-container .recently .row{
    flex-wrap: wrap;
    justify-content: flex-start;
  }
  .interface-container .recently .row .col{
    width: calc(100% / 4 - 15px);
    margin: 20px 5px;
  }
}

@media screen and (max-width: 576px){
  .side-bar{
    width: 90px;
  }
  .top-bar{
    width: calc(100vw - 90px);
  }
  .interface{
    width: calc(100vw - 90px);
  }
  .interface-container .recently .row .col{
    width: calc(100% / 2 - 30px);
  }
  .main-menu .logo svg:nth-child(1){
    display: block;
  }
  .main-menu .logo svg:nth-child(2){
    display: none;
  }
  .main-menu span, .main-menu .fa-plus, .menu .playlist{
    display: none;
  }
  .icons{
    align-items: center;
  }
  .user span, hr{
    display: none;
  }
  .user{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
  }
  .user svg{
    margin-bottom: 10px;
  }
}

